# harness-evals

./: .gitignore  .pre-commit-config.yaml  .trivyignore  AGENTS.md  CHANGELOG.md  Makefile  PLAN.md  README.md  REVIEW.md  pyproject.toml  xas
.github/workflows/: ci.yml  publish.yml
.harness/: online_eval.yaml  publish.yaml
docs/: CONTRIBUTING.md  architecture.md  harness-evals-plus-aiEvals-integration.md  integration-guide.md  metrics-guide.md  online-evals-pipeline.md
docs/adr/: 001-dataclass-over-pydantic.md  002-normalized-scores.md  003-safety-never-averaged.md  004-evaluate-catches-exceptions.md  005-list-over-dataset-class.md  006-async-first-llm.md  007-golden-evalcase-split.md  008-dataset-level-method-names.md  009-five-dimensions.md  010-tool-argument-match-separate-metric.md
examples/: baseline-regression.eval.yaml  basic_eval.py  ci_baseline_regression.py  conftest.py  conversation-goldens.README.md  ecommerce_support_trace.json  eval_from_file.py  eval_oneliner.py  goldens.jsonl  harness-agent-conversation.eval.yaml  harness-agent.README.md  harness-agent.goldens.jsonl  harness-environments.example.yaml  harness_env.py  harness_sink_example.py  harness_sse_elicitation_adapter.py  http-agent.eval.yaml  load_harness_env.py  otel_trace_eval.py  robustness_eval.py  security_eval.py  sse_events_match_metric.py  sse_trajectory_metric.py  streaming-http.README.md  streaming-http.eval.yaml  streaming-http.goldens.jsonl  support-bot.eval.yaml  synthesize_dataset.py
examples/integrations/: README.md
examples/integrations/anthropic/: example.py  test_eval.py
examples/integrations/bedrock_agentcore/: example.py  test_eval.py
examples/integrations/crewai/: example.py  test_eval.py
examples/integrations/dspy/: example.py  test_eval.py
examples/integrations/google_adk/: example.py  test_eval.py
examples/integrations/langchain/: example.py  test_eval.py
examples/integrations/litellm/: example.py  test_eval.py
examples/integrations/llama_index/: example.py  test_eval.py
examples/integrations/openai/: example.py  test_eval.py
examples/integrations/openai_agents/: example.py  test_eval.py
examples/integrations/pydantic_ai/: example.py  test_eval.py
examples/integrations/strands/: example.py  test_eval.py
examples/prompts/: support-bot.txt
scripts/: generate_online_eval_pipeline.py  online_eval.py
specs/: 2026-06-16-local-eval-runner-design.md  eval-recommender-agent.md  local-eval-runner.md
src/harness_evals/: __init__.py  _async_compat.py  _build.py  _langfuse_compat.py  catalog.py  cli.py  datasets.py  env.py  errors.py  eval.py  http_utils.py  logging_config.py  plugins.py  refs.py  summary.py
src/harness_evals/baseline/: __init__.py  compare.py  json_store.py  store.py
src/harness_evals/benchmarks/: __init__.py  _answer_utils.py  _security_utils.py  agentdojo.py  aicg_sec_eval.py  arc.py  base.py  bbh.py  boolq.py  dataset_cache.py  do_not_answer.py  drop.py  gsm8k.py  hellaswag.py  humaneval.py  jailbreakbench.py  jailbreakv_28k.py  mmlu.py  open_prompt_injection.py  sandbox.py  sec_code_bench.py  security_base.py  truthfulqa.py  winogrande.py
src/harness_evals/config/: __init__.py  runner.py  schema.py
src/harness_evals/conversation/: __init__.py  context.py  golden.py  graph.py  human_input.py  runner.py  simulator.py
src/harness_evals/core/: eval_case.py  golden.py  metric.py  (+5 more)
tests/: conftest.py  test_baseline.py  test_cli.py  test_conversational_streaming_http_target.py  test_core.py  test_dataset_sources.py  test_datasets.py  test_embedding.py  test_eval.py  test_evaluate_dataset_pair.py  test_harness_otel_source.py  test_input_generator.py  test_langfuse_dataset_source.py  test_langfuse_prompt_source.py  test_logging_config.py  test_online_eval_script.py  test_optimizer.py  test_plugins.py  test_prompt_sources.py  test_prompt_template.py  test_recommender.py  test_refs.py  test_runner_conversation.py  test_streaming_http_target.py  test_summary.py  test_targets.py  test_templating.py  test_trajectory.py  test_types.py  test_vendor_isolation.py
tests/benchmarks/: conftest.py  test_agentdojo.py  test_aicg_sec_eval.py  test_answer_utils.py  test_arc.py  test_base.py  test_bbh.py  test_boolq.py  test_dataset_cache.py  test_do_not_answer.py  test_drop.py  test_gsm8k.py  test_hellaswag.py  test_humaneval.py  test_jailbreakbench.py  test_jailbreakv_28k.py  test_mmlu.py  test_open_prompt_injection.py  test_sandbox.py  test_sec_code_bench.py  test_security_base.py  test_security_utils.py  test_truthfulqa.py  test_winogrande.py
tests/config/: test_conversation_runner.py  test_runner.py  test_schema.py
tests/conversation/: k8s_connector_sse_fixtures.py  test_elicitation_simulator.py  test_golden.py  test_graph.py  test_harness_data_replay.py  test_human_input_simulator.py  test_session_isolation.py  test_simulator.py
tests/examples/: test_sse_events_match_metric.py
tests/importers/: __init__.py  test_importers_base.py  test_langfuse_importer.py  test_otel_importer.py
tests/llm/: test_harness_ai.py  test_llm.py  test_usage.py
tests/metrics/: test_agent.py  test_bias.py  test_compliance_severity.py  test_conversation.py  test_conversational_geval.py  test_dag.py  test_deterministic.py  test_fault_robustness.py  test_list_contains.py  test_llm_judge.py  test_mcp.py  test_operational.py  test_pairwise.py  test_predictability.py  test_presets.py  test_prompt_alignment.py  test_rag.py  test_rag_phase6a.py  test_reliability.py  test_robustness.py  test_rouge.py  test_safety.py  test_safety_new.py  test_security.py  test_similarity.py  test_structural.py  test_summarization.py  test_trajectory.py  test_trajectory_consistency.py  test_turn_operational.py  test_webhook.py
tests/perturbations/: test_perturbations.py  test_rephrase.py
tests/reporting/: test_html_reporter.py
tests/sinks/: test_sinks.py
tests/sources/: test_langfuse_source.py  test_otel_source.py
tests/synthesizer/: test_conversation_synthesizer.py  test_synthesizer.py
tests/testing/: test_fault_injector.py
(+189 files in other folders)
