[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-evals"
version = "0.3.5"
description = "Open-source AI evaluation framework for LLM agents, prompts, and structured outputs"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Harness AI", email = "ai@harness.io" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "deepdiff>=7.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
llm = ["openai>=1.40", "anthropic>=0.30"]
otlp = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
similarity = ["nltk>=3.8"]
harness = ["httpx>=0.27"]
langfuse = ["langfuse>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pre-commit>=3.5",
]
all = ["harness-evals[llm,otlp,similarity,langfuse,harness]"]

[project.urls]
Homepage = "https://github.com/harness/harness-evals"
Documentation = "https://github.com/harness/harness-evals#readme"
Repository = "https://github.com/harness/harness-evals"
Issues = "https://github.com/harness/harness-evals/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "TC001", # don't force TYPE_CHECKING blocks — imports are used at runtime
    "TC002",
    "TC003",
]

[tool.ruff.lint.isort]
known-first-party = ["harness_evals"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (may require LLM keys)",
]
asyncio_mode = "auto"
