[tool.poetry]
name = "harness-evals"
version = "0.9.4"
description = "Open-source AI evaluation framework for LLM agents, prompts, and structured outputs"
readme = "README.md"
license = "Apache-2.0"
authors = ["Harness AI <ai@harness.io>"]
homepage = "https://github.com/harness/harness-evals"
documentation = "https://github.com/harness/harness-evals#readme"
repository = "https://github.com/harness/harness-evals"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "harness_evals", from = "src" }]

[tool.poetry.scripts]
build = "harness_evals._build:main"
harness-evals = "harness_evals.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<4"
deepdiff = ">=7.0"
jsonschema = ">=4.0"
jsonpath-ng = ">=1.6"
pyyaml = ">=6.0"
openai = { version = ">=1.40", optional = true }
anthropic = { version = ">=0.30", optional = true }
opentelemetry-sdk = { version = ">=1.20", optional = true }
opentelemetry-exporter-otlp-proto-grpc = { version = ">=1.20", optional = true }
opentelemetry-exporter-otlp-proto-http = { version = ">=1.20", optional = true }
nltk = { version = ">=3.9.4", optional = true }
httpx = { version = ">=0.27", optional = true }
pyjwt = { version = ">=2.13.0", optional = true }
langfuse = { version = ">=2.0", optional = true }

[tool.poetry.extras]
llm = ["openai", "anthropic"]
otlp = ["opentelemetry-sdk", "opentelemetry-exporter-otlp-proto-grpc", "opentelemetry-exporter-otlp-proto-http"]
similarity = ["nltk"]
harness = ["httpx", "pyjwt"]
langfuse = ["langfuse"]
all = ["openai", "anthropic", "opentelemetry-sdk", "opentelemetry-exporter-otlp-proto-grpc", "opentelemetry-exporter-otlp-proto-http", "nltk", "httpx", "pyjwt", "langfuse"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
pytest-asyncio = ">=0.23"
ruff = ">=0.4"
pre-commit = ">=3.5"
build = ">=1.0"

[tool.poetry.plugins."harness_evals.dataset_sources"]
langfuse = "harness_evals.datasets.langfuse:LangfuseDatasetSource"

[tool.poetry.plugins."harness_evals.prompt_sources"]
langfuse = "harness_evals.prompts.langfuse:LangfusePromptSource"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "TC001", # don't force TYPE_CHECKING blocks — imports are used at runtime
    "TC002",
    "TC003",
]

[tool.ruff.lint.isort]
known-first-party = ["harness_evals"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (may require LLM keys)",
]
asyncio_mode = "auto"
